--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,3 +40,8 @@ jobs:
       - name: Test with PyTest
         run: |
           pytest tests/test_models.py
+       
+      # Linter
+      - name: Check style with pylint
+      run: |
+      python3 -m pylint --fail-under=0 --reports=y inflammation
